--- a/src/modules/Tabs/safari-tabs.scss
+++ b/src/modules/Tabs/safari-tabs.scss
@@ -44,7 +44,7 @@
   border: var(--anp-safari-border-width, 1px) solid var(--tab-outline-color);
 }
 .anp-alternate-tab-toggle.anp-alt-tab-anim-toggle .mod-root .workspace-tabs:not(.mod-stacked) .workspace-tab-header {
-  transition: 400ms;
+  transition: 400ms, background-color 150ms ease-in-out;
 }
 .anp-alternate-tab-toggle .workspace-tabs:not(.mod-stacked) .workspace-tab-header:first-child {
   margin-left: 0;
@@ -55,7 +55,7 @@
 .anp-alternate-tab-toggle .mod-root:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked){
   .workspace-tab-header-inner {
     padding: 0 4px 0 8px;
-    transition: 400ms;
+  transition: 400ms, background-color 150ms ease-in-out;
   }
   .workspace-tab-header-inner, .workspace-tab-header-inner-close-button, .workspace-tab-header-inner-icon {
     color: var(--text-muted);
