--- a/theme.css
+++ b/theme.css
@@ -2795,7 +2795,7 @@ hr {
   text-align: var(--anp-table-align-td, center);
 }
 
-.anp-table-toggle table.dataview.table-view-table > tbody > tr:hover {
+table.dataview.table-view-table > tbody > tr:hover {
   background-color: rgba(var(--ctp-surface1), 0.1) !important;
 }
 
@@ -2848,6 +2848,9 @@ hr {
 Minimal cards are a snippet designed by Kepano for the Minimal theme.
 None of the original code was used in this theme, and the following code is merely some tweaks to the snippet.
 --------------------------------------------*/
+.cards .table-view-table {
+  --cards-columns: repeat(auto-fit, minmax(var(--cards-min-width), var(--cards-max-width)));
+}
 .cards .table-view-table > tbody > tr > td {
   border-bottom: 1px dashed rgba(var(--ctp-subtext0), 0.2) !important;
 }
