--- a/src/modules/Features/index.scss
+++ b/src/modules/Features/index.scss
@@ -1,6 +1,7 @@
 @import "custom-vault-title.scss";
 @import "transitions.scss";
 @import "metadata-button.scss";
+@import "cards-minimal.scss";
 @import "colorful-frame.scss";
 @import "custom-checkboxes.scss";
 @import "floating-title.scss";
