--- a/theme.css
+++ b/theme.css
@@ -3237,9 +3237,6 @@ None of the code was used, and the callout was written from scratch.
 Minimal cards are a snippet designed by Kepano for the Minimal theme.
 None of the original code was used in this theme, and the following code is merely some tweaks to the snippet.
 --------------------------------------------*/
-.cards .table-view-table {
-  --cards-columns: repeat(auto-fit, minmax(var(--cards-min-width), var(--cards-max-width))); /*-force card width to be obeyed-*/
-}
 .cards .table-view-table > tbody > tr > td {
   border-bottom: 1px dashed var(--background-modifier-border) !important; /*-Dashed borders for all cells-*/
 }
@@ -3256,8 +3253,12 @@ None of the original code was used in this theme, and the following code is mere
 .cards .table-view-table > tbody > tr > td:first-child span a {
   padding: 0 !important; /*-0 padding on link-*/
 }
+.cards:not(.cards-cols-1):not(.cards-cols-2):not(.cards-cols-3):not(.cards-cols-4):not(.cards-cols-5):not(.cards-cols-6):not(.cards-cols-7):not(.cards-cols-8) {
+  --cards-columns: repeat(auto-fit, minmax(var(--cards-min-width), var(--cards-max-width))); /*-force card width to be obeyed-*/
+}
 
 .cards.cards-bookmark .table-view-table .table-view-tbody tr::after {
+  --text-normal: var(--text-muted);
   content: " ";
   width: 25px;
   height: 25px;
@@ -4337,9 +4338,15 @@ body .excalidraw .library-menu-items-container .library-actions--load, body .exc
   --h6-color: var(--text-normal) !important;
 }
 
-.decorations-normal-toggle {
+.decorations-normal-toggle,
+.decorations-normal-toggle.markdown-rendered {
   --bold-color: var(--text-normal) !important;
   --italic-color: var(--text-normal) !important;
+}
+
+.decorations-normal-toggle.markdown-rendered .table-view-table {
+  --bold-color: var(--text-muted) !important;
+  --italic-color: var(--text-muted) !important;
 }
 
 /*# sourceMappingURL=theme.css.map */
