search highlight revamp

--- a/src/modules/Misc/disable-options.scss
+++ b/src/modules/Misc/disable-options.scss
@@ -12,7 +12,8 @@
   --bold-color: var(--text-normal) !important;
   --italic-color: var(--text-normal) !important;
 }
-.decorations-normal-toggle.markdown-rendered .table-view-table {
+.decorations-normal-toggle.markdown-rendered .table-view-table,
+.decorations-normal-toggle.is-live-preview .table-view-table {
   --bold-color: var(--text-muted) !important;
   --italic-color: var(--text-muted) !important;
 }
