--- a/src/modules/Note/headers.scss
+++ b/src/modules/Note/headers.scss
@@ -103,7 +103,10 @@
 .anp-h5-divider .markdown-rendered h5,
 .anp-h5-divider .HyperMD-header-5,
 .anp-h6-divider .HyperMD-header-6,
-.anp-h6-divider .markdown-rendered h6 { border-bottom: var(--hr-thickness) solid var(--background-modifier-border); }
+.anp-h6-divider .markdown-rendered h6 {
+	border-bottom: var(--hr-thickness) solid var(--background-modifier-border);
+	padding-bottom: 2px;
+}
 /*-Source editor recolor application-*/
 .cm-formatting-header-1 { color: var(--h1-color); }
 .cm-formatting-header-2 { color: var(--h2-color); }
