--- a/snippets/extended-colorschemes.css
+++ b/snippets/extended-colorschemes.css
@@ -119,6 +119,7 @@ settings:
   --ctp-mantle: 30, 30, 30;
   --ctp-crust: 25, 25, 25;
   --ctp-accent: 165, 117, 98;
+  --background-modifier-border: rgb(51, 51, 51);
 }
 .theme-light.anp-theme-ext-light.ctp-nord-light {
   --ctp-rosewater: 209, 135, 112;
