--- a/src/modules/Base/layouts.scss
+++ b/src/modules/Base/layouts.scss
@@ -92,16 +92,20 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
     border: 1px solid var(--tab-outline-color);
     margin-bottom: var(--anp-card-layout-padding, 10px);
 }
-.anp-card-layout.anp-card-shadows .workspace-split .workspace-leaf-content {
-    box-shadow: 0 5px 5px 0px rgba(0,0,0,0.2);
+.anp-card-layout.anp-card-shadows {
+    .workspace-split .workspace-leaf-content, .side-dock-actions {
+        box-shadow: 0 3px 4px 0px rgba(0,0,0,0.05);
+    }
+    &.anp-card-layout-filebrowser {
+        .workspace-split  .workspace-leaf-content[data-type="file-explorer"] {
+            box-shadow: 0 3px 4px 0px rgba(0,0,0,0.05);
+        }
+    }
 }
 .anp-card-layout .workspace-split .workspace-leaf-content[data-type="file-explorer"] {
     background-color: var(--tab-container-background);
     box-shadow: none;
     border-width: 0px;
-}
-.anp-card-layout.anp-card-layout-filebrowser.anp-card-shadows .workspace-split  .workspace-leaf-content[data-type="file-explorer"] {
-    box-shadow: 0 5px 5px 0px rgba(0,0,0,0.2);
 }
 .anp-card-layout.anp-card-layout-filebrowser .workspace-split  .workspace-leaf-content[data-type="file-explorer"] {
     background-color: var(--background-primary);
