--- a/src/modules/Tabs/safari-tabs.scss
+++ b/src/modules/Tabs/safari-tabs.scss
@@ -45,7 +45,7 @@
   transition: 400ms, background-color 150ms ease-in-out;
 }
 .anp-alternate-tab-toggle .mod-root .workspace-tabs:not(.mod-stacked) .workspace-tab-header {
-  max-width: var(--tab-max-width) !important;
+  max-width: var(--tab-max-width);
   border: var(--anp-safari-border-width, 1px) solid var(--tab-outline-color);
 }
 .anp-alternate-tab-toggle.anp-alt-tab-anim-toggle .mod-root .workspace-tabs:not(.mod-stacked) .workspace-tab-header {
@@ -60,7 +60,7 @@
 .anp-alternate-tab-toggle .mod-root:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked){
   .workspace-tab-header-inner {
     padding: 0 4px 0 8px;
-  transition: 400ms, background-color 150ms ease-in-out;
+  transition: 400ms, background-color 150ms ease-in-out, max-width 400ms;
   }
   .workspace-tab-header-inner, .workspace-tab-header-inner-close-button, .workspace-tab-header-inner-icon {
     color: var(--text-muted);
@@ -70,8 +70,8 @@
   display: none;
 }
 .anp-alternate-tab-toggle .mod-root:not(.mod-left-split):not(.mod-right-split) .workspace-tabs:not(.mod-stacked) .workspace-tab-header.is-active {
-  flex-grow: 1.67 !important;
-  max-width: var(--tab-max-width-active) !important;
+  flex-grow: 1.67;
+  max-width: var(--tab-max-width-active) ;
   background-color: var(--background-primary);
 }
 .anp-alternate-tab-toggle .mod-root .workspace-tabs:not(.mod-stacked) .workspace-tab-header.is-active .workspace-tab-header-inner-title {
