--- a/src/modules/Tabs/safari-tabs.scss
+++ b/src/modules/Tabs/safari-tabs.scss
@@ -1,8 +1,9 @@
-.anp-alternate-tab-toggle, .anp-default-tab {
+.anp-alternate-tab-toggle, .anp-default-tab, .anp-safari-tab-toggle {
   --header-height: var(--anp-alt-tab-custom-height, 40px);
   --tab-stacked-header-width: var(--anp-stacked-header-width, 40px);
 }
-.anp-alternate-tab-toggle .workspace-tabs:not(.mod-stacked) {
+.anp-alternate-tab-toggle .workspace-tabs:not(.mod-stacked),
+.anp-safari-tab-toggle .workspace-tabs:not(.mod-stacked) {
   --tab-background: var(--background-secondary);
   --tab-background-active: var(--background-primary);
   --tab-font-size: 12px;
